--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#0e0e0e" />
   <title>People & Style — Clothing Rentals</title>
 </head>
 
-<body>
+<body class="bg-[#0e0e0e]">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
